--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 body {
     font-family: 'Roboto', sans-serif;
     line-height: 1.6;
-    color: #e0e0e0;
+    color: #e9e9e9;
     background-color: #121212;
     margin: 0;
     transition: background-color 0.3s, color 0.3s;
@@ -11,8 +11,8 @@ body {
 
 /* Header styling */
 header {
-    background: #1f1f1f;
-    color: #e0e0e0;
+    background: linear-gradient(rgb(75, 30, 55), rgb(159, 40, 100), rgb(140, 30, 85));
+    color: #e9e9e9;
     padding: 1rem;
     text-align: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
@@ -37,7 +37,7 @@ nav ul li {
 }
 
 nav ul li a {
-    color: #e0e0e0;
+    color: #e9e9e9;
     text-decoration: none;
     font-weight: 700;
     transition: color 0.3s;
@@ -60,7 +60,7 @@ nav ul li a:hover {
     font-weight: 600;
     font-size: 2.5rem;
     margin: 0;
-    color: #00bcd4; 
+    color: #00bfd4; 
     animation: glow 1.5s infinite alternate;
 }
 
@@ -69,7 +69,7 @@ nav ul li a:hover {
     font-weight: 100;
     font-size: 1.5rem;
     margin: 0;
-    color: #00bcd4; 
+    color: #00bfd4; 
     animation: glow 1.5s infinite alternate;
 }
 
@@ -93,11 +93,11 @@ nav ul li a:hover {
 
 .project-tile {
     width: 300px;
-    background: #2c2c2c;
+    background: linear-gradient(rgb(75, 30, 55), rgb(159, 40, 100), rgb(140, 30, 85));
     margin: 1rem;
     padding: 1rem;
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 4px 8px rgba(50, 50, 50, 0.5);
     text-align: center;
     transition: transform 0.3s, box-shadow 0.3s;
 }
@@ -110,7 +110,7 @@ nav ul li a:hover {
 .project-tile h2 {
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
-    color: #00bcd4; 
+    color: #00bfd9; 
 }
 
 .project-tile img {
@@ -126,13 +126,13 @@ nav ul li a:hover {
 
 .project-tile p {
     font-size: 1rem;
-    color: #b0b0b0;
+    color: #e9e9e9;
 }
 
 .project-tile a {
     display: inline-block;
     margin-top: 1rem;
-    color: #ff4081; 
+    color: #ff9090; 
     text-decoration: none;
     font-weight: 500;
     transition: color 0.3s;
@@ -143,43 +143,47 @@ nav ul li a:hover {
 }
 
 /* Contact section styling */
-#contact {
-    
-    color: #e0e0e0;
-    
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-   
+#contact h4 {
+   color: #f0f0f0;
+    text-align: center; 
+    font-size: 1.3rem;
+    margin-left: 34px;
 }
 
 #contact ul {
     
     list-style: none;
-    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
     
 }
 
 #contact ul li {
-    margin: 0.5rem 0;
+    padding: 15px;
+   
 }
 
 #contact a {
     
-    color: #00bcd4; 
+    color: #00bcd9; 
     text-decoration: none;
-    font-weight: 500;
+    margin: 0 auto;
+    font-size: 40px;
     transition: color 0.3s;
+   
 }
 
 #contact a:hover {
-    color: #ff4081; 
+    color: #ff4081;
 }
 
 /* Footer styling */
 footer {
-    background: #1f1f1f;
-    color: #e0e0e0;
+    background: linear-gradient(rgb(75, 30, 55), rgb(159, 40, 100), rgb(140, 30, 85));
+    color: #e9e9e9;
     padding: 1rem;
     text-align: center;
     box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.5);
@@ -201,6 +205,8 @@ footer p {
     nav ul li {
         display: block;
         margin-bottom: 10px;
+    } #welcome-section h1 {
+        margin-top: 20px
     }
 
     #projects {
@@ -229,4 +235,4 @@ footer p {
     footer p {
         font-size: 0.8rem;
     }
-}
+}  
