--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
     font-family: 'Roboto', sans-serif;
     line-height: 1.6;
     color: var(--t-a-p);
-    background-color: #121212;
+    background-color: #ffffff;
     margin: 0;
     transition: background-color 0.3s, color 0.3s;
     padding-top: 60px; 
