--- a/styles.css
+++ b/styles.css
@@ -124,7 +124,7 @@ header nav a {
 
 #contact-form {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     max-width: 600px;
