--- a/styles.css
+++ b/styles.css
@@ -121,13 +121,13 @@ header nav a {
 #contact2 a:hover {
     color: #34495e;
 }
-#contact h1 {text-align: center}
+#contact h2 {text-align: center; display: block}
 #contact-form {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 40%;
+    width: 80%;
     max-width: 600px;
     margin: 10px auto;
     padding: 20px;
